--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,13 @@
     <string name="token">IuihiRRIR4We7Xpte2uIFgjBHsg4Mzrr</string>
     <string name="token_secret">Ka9lUCAvRdiEoaCa3Ai8eEi8178</string>
 
+    <!--Facebook-->
+    <string name="facebook_app_id">1053152631411394</string>
+
+
     <string name="preference_file_key">com.example.lsiems.myrestaurants.PREFERENCE_FILE_KEY</string>
     <string name="firebase_url">https://siems-myrestaurants.firebaseio.com/</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
